Atualizar o styles.css

--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-/* Reset básico para remover margens e paddings padrões e usar box-sizing border-box */
+8/* Reset básico para remover margens e paddings padrões e usar box-sizing border-box */
 * {
     margin: 0;
     padding: 0;
@@ -56,7 +56,7 @@ body {
 
 /* Estilo para o ícone dentro do item */
 .nav-item-app i {
-    font-size: 2rem; /* Tamanho maior para os ícones */
+    font-size: 1.5rem; /* Tamanho maior para os ícones */
     margin-bottom: 4px; /* Espaço entre o ícone e o texto */
 }
 
